# todo

./: .gitignore  AUTHORS  COPYING  Makefile.am  README.md  bootstrap  configure.ac
include/: Makefile.am  argparse.h  backend-delim.h  backend-sqlite3.h  config-reader.h  dataframe.h  delim-reader.h  dict.h  dump.h  edit.h  error-codes.h  error-functions.h  export.h  help.inc  helpers.h  import.h  list.h  mem.h  minunit.h  return-codes.h  screen.h  task.h  todo.h  view.h
src/: Makefile.am
src/backend/: Makefile.am  backend-sqlite3.c
src/backend-delim/: Makefile.am  backend-delim.c  lexer.c  parser.y  reader.c
src/backend-sqlite3/: Makefile.am  backend-sqlite3.c
src/common/: Makefile.am  dataframe.c  dict.c  error-functions.c  helpers.c  list.c  mem.c  screen.c  task.c
src/config-reader/: Makefile.am  config-reader.c  lexer.l  parser.y
src/delim-reader/: Makefile.am  lexer.c  parser.y  reader.c
src/todo/: Makefile.am  dump.c  edit.c  export.c  import.c  main.c  todo.c  view.c
test/: Makefile.am  test-prototype.c
test/data/: Makefile.am  make-test-db.sql  test-data.psv  test-db.sqlite3
test/unit/: Makefile.am  test-prototype.c
